# HackatonRemoteController

./: README.md  ReadMe.md  get_submission.py  pyproject.toml  requirements.txt
Test/: CNN.py  ModelTest.py  Recognition.py  SoundTest.py  TeachingModel.py  TeachingModel2.py
data/: label2id.py
decorates/: decorates.py
model_keras/: LearningKerasModel.py  label_encoder.pkl
model_whisper/: LearningWhisperModel.py
src/: KerasModel.py  WhisperModel.py  clear_audio.py  command_from_text.py  decorates.py  main.py
