[tool.poetry]
name = "hackatonremotecontroller"
version = "0.1.0"
description = "HackatonRemoteController - проект, предназначенный для определения голосовых команд. Он позволяет пользователям взаимодействовать с устройствами с помощью голосовых команд, что упрощает управление и делает его более интуитивным."
authors = ["Nevazhno <serzh.simonoid.95@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
librosa = "0.10.2"
noisereduce = "3.0.3"
spacy = "~3.9.0"
torch = "~2.4.1"
transformers = "~4.45.2"
numpy = ">=2.0.0,<2.1.0"
tensorflow = "~2.12"
scikit-learn = "~1.5.2"

[tool.poetry.dev-dependencies]
typing = "3.7.4.3"  # Если это действительно необходимо, иначе можно удалить

[tool.poetry.scripts]
download-model = "spacy.cli.download ru_core_news_sm"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"